janusgraphstuff/janusgraph-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\598073\DEVTOOLS\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: janusgraph
  name: janusgraph
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: janusgraph
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\598073\DEVTOOLS\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/janusgraph: "true"
        io.kompose.service: janusgraph
    spec:
      containers:
        - image: janusgraphbuild
          name: janusgraph
          ports:
            - containerPort: 8182
          resources: {}
          imagePullPolicy: Never
      restartPolicy: Always
status: {}
