janusgraphstuff/janusgraph-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: janusgraph
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/janusgraph: "true"
  podSelector:
    matchLabels:
      io.kompose.network/janusgraph: "true"
